[metadata]
url = https://github.com/i2mint/replize
root_url = https://github.com/i2mint/
license = apache-2.0
version = 0.1.5
description = Tools to create REPL interfaces
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = REPL
name = replize
display_name = replize

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =

[options.extras_require]
prompt_toolkit =
	prompt_toolkit>=3.0.0
rich =
	rich>=10.0.0
config =
	tomli>=1.2.0; python_version < "3.11"
	pyyaml>=5.0.0
full =
	prompt_toolkit>=3.0.0
	rich>=10.0.0
	tomli>=1.2.0; python_version < "3.11"
	pyyaml>=5.0.0
dev =
	pytest>=7.0.0
	pytest-mock>=3.0.0
	axblack
	pylint
	mypy 

[options.entry_points]
console_scripts = 
	replize = replize.replize:_replize_cli

